<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ActivityMain">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">





                <LinearLayout

                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">



                <androidx.cardview.widget.CardView
                    android:id="@+id/MainCardViewButtonMaterial"
                    android:foreground="@drawable/button_material_background"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="#9DB561"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:contentDescription="@string/menu_material"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="5dp"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:src="@drawable/recycle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:shadowColor="#000000"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/anton"
                        android:text="@string/menu_material"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/MainCardViewButtonLocation"
                    android:foreground="@drawable/button_material_background"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="#F15D5D"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView

                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="5dp"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:src="@drawable/location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/menu_location" />

                    <TextView
                        android:shadowColor="#000000"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/anton"
                        android:text="@string/menu_location"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>


                <LinearLayout

                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/MainCardViewButtonProducts"
                        android:foreground="@drawable/button_material_background"
                        app:cardBackgroundColor="#F18F44"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="0dp"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" >

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_marginStart="32dp"
                                android:id="@+id/imageView2"
                                android:layout_width="120dp"
                                android:layout_height="0dp"
                                android:contentDescription="@string/menu_product"
                                android:scaleX="0.8"
                                android:scaleY="0.8"
                                android:src="@drawable/produto"
                                android:tint="@android:color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/textView2"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />


                            <TextView

                                android:id="@+id/textView2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:fontFamily="@font/anton"
                                android:shadowColor="#000000"
                                android:shadowDx="1.5"
                                android:shadowDy="1.3"
                                android:shadowRadius="1.6"
                                android:text="@string/menu_product"
                                android:textAlignment="center"
                                android:textColor="#ffffff"
                                android:textSize="26sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageView2"
                                app:layout_constraintTop_toTopOf="parent" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>



                </LinearLayout>


                <LinearLayout

                   android:layout_margin="4dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/MainCardViewStatistics"
                        android:foreground="@drawable/button_material_background"
                        app:cardBackgroundColor="#86C5EE"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="0dp"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" >

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_marginStart="32dp"
                                android:id="@+id/imageView4"
                                android:layout_width="120dp"
                                android:layout_height="0dp"
                                android:contentDescription="@string/menu_statistcs"
                                android:scaleX="0.8"
                                android:scaleY="0.8"
                                android:src="@drawable/chart"
                                android:tint="@android:color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/textView"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />


                            <TextView

                                android:id="@+id/textView"
                                android:layout_width="0dp"
                                android:layout_height="47dp"
                                android:layout_gravity="bottom"
                                android:fontFamily="@font/anton"
                                android:shadowColor="#000000"
                                android:shadowDx="1.5"
                                android:shadowDy="1.3"
                                android:shadowRadius="1.6"
                                android:text="@string/stats"
                                android:textAlignment="center"
                                android:textColor="#ffffff"
                                android:textSize="26sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/imageView4"
                                app:layout_constraintTop_toTopOf="parent" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>



                </LinearLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/MainCardViewButtonLearn"
                        android:foreground="@drawable/button_material_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#FCC143"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="40dp"
                            android:contentDescription="learn"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:src="@drawable/learn" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/anton"
                            android:shadowColor="#000000"
                            android:shadowDx="1.5"
                            android:shadowDy="1.3"
                            android:shadowRadius="1.6"
                            android:text="Aprenda"
                            android:textAlignment="center"
                            android:textColor="#ffffff"
                            android:textSize="26sp"
                            android:textStyle="bold" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/MainCardViewButtonVideos"
                        android:foreground="@drawable/button_material_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#8C7E6B"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="0dp">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="40dp"
                            android:contentDescription="@string/menu_location"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:src="@drawable/video" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/anton"
                            android:shadowColor="#000000"
                            android:shadowDx="1.5"
                            android:shadowDy="1.3"
                            android:shadowRadius="1.6"
                            android:text="Videos"
                            android:textAlignment="center"
                            android:textColor="#ffffff"
                            android:textSize="26sp"
                            android:textStyle="bold" />


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </TableLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>